kubernetes/skywalker/media/jellyseerr/jellyseerr.virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: jellyseerr

spec:
  gateways:
    - istio-system/feldman-in
  hosts:
    - jellyseerr.feldman.in
  http:
    - match:
      - uri:
          prefix: /
      route:
        - destination:
            host: jellyseerr
            port:
              number: 5055
